SERVER-8278 Change replicatedTo to writtenTo and add primary to list